--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json="1.0"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
+regex = "1"
+anyhow = "1.0.44"
+chrono = "0.4"
