--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-openssl = { version = "0.10.32", features = ["vendored"] }
-futures = "0.3.0"
 serde = { version = "1", features = ["derive"] }
 serde_json="1.0"
-tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.18.2", features = ["rt-multi-thread","macros"] }
+reqwest = { version = "0.11.10", features = ["json"] }
 regex = "1.5.5"
 anyhow = "1.0.44"
 chrono = "0.4"
+feed-rs = "1.0"
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
+html2md = "0.2.13"
