--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+openssl = { version = "0.10.32", features = ["vendored"] }
 serde = { version = "1", features = ["derive"] }
 serde_json="1.0"
 tokio = { version = "1.18.2", features = ["rt-multi-thread","macros"] }
